--- a/registration-client/src/main/resources/labels_en.properties
+++ b/registration-client/src/main/resources/labels_en.properties
@@ -429,7 +429,7 @@ onboardAlertMsg = The user is successfully onboarded
 
 
 #Unknown
-ageOrDOBField = OR
+ageOrDOBField = 
 userGuide = User Guide
 registeringIndividual = Registering an Individual
 onboardingYourself = Onboarding yourself
