--- a/registration-client/src/main/resources/labels_fr.properties
+++ b/registration-client/src/main/resources/labels_fr.properties
@@ -426,7 +426,7 @@ view=Aperçu
 onboardAlertMsg = L'utilisateur est intégré avec succès
 
 #Unknown
-ageOrDOBField = OU
+ageOrDOBField = --
 userGuide = Mode d'emploi
 registeringIndividual = Inscription d'un individu
 onboardingYourself = S'embarquer
